src/app/components/cards/card/card.component.scss
@import "src/scss/_variables.scss";
@import "src/scss/_mixins.scss";

/********************************************/
/*   # Card                                */
/******************************************/

.card {
  /*display*/
  display: block;
  /*structure*/
  width: $cardWidth;
  /*borders*/
  border-radius: $cardBorderRadius;
  /*colors*/
  border-color: rgb(238, 239, 240);
  /*shadows*/
  box-shadow: 2px 1px 1px rgb(235, 236, 237);
  /*flex override*/
  flex-direction: unset;

  /********************************************/
  /*   # Feature Image                       */
  /******************************************/

  &__feature-image{
    /*structure*/
    height: 10.63rem;
    /*borders*/
    border-top-left-radius: $cardBorderRadius;
    border-top-right-radius: $cardBorderRadius;
    /*colors*/
    background-color: $colorLightGrey;
    /*object*/
    object-fit: cover;

    /*********************
    *  > Card Editable   *
    *********************/

    .card--editable & {
      opacity: .6;
    }
  }

  /********************************************/
  /*   # Title                               */
  /******************************************/

  &__title {
    /*structure*/
    min-height: 3rem;
    /*typography*/
    font-size: 1rem;
    line-height: 1.5;
    letter-spacing: .27px;
    font-weight: 200;
    /*colors*/
    color: $colorBlack;
  }

  /********************************************/
  /*   # Body                                */
  /******************************************/

  &__body {
    /*position*/
    z-index: 50;
    /*spacing*/
    padding-top: 12px;
    padding-bottom: 18px;
    padding-left: 18px;
    padding-right: 18px;
  }

  /********************************************/
  /*   # Menu Wrapper                        */
  /******************************************/


  &__menu-wrapper {
    /*display*/
    opacity: 0;
    /*position*/
    z-index: 50;
    position: absolute;
    top: 10px;
    right: 10px;


    /*********************
    *  > Card Editable   *
    *********************/

    .card--editable & {
      // visibility: visible;
      opacity: 1;
    }
  }

  &:focus-within &__menu-wrapper {
    // visibility: visible;
    opacity: 1;
  }

  /********************************************/
  /*   # Status Wrapper                      */
  /******************************************/

  &__status-wrapper {
    position: relative;
    z-index: 10;
  }

  /********************************************/
  /*   # Footer                              */
  /******************************************/

  &__footer {}



}

/********************************************/
/*   # Has Touch                           */
/******************************************/

@include hasTouch {

  .card--editable .card__feature-image {
    opacity: 1;
  }

  .card__menu-wrapper {
    /*display*/
    opacity: 1;
    /*position*/
    top: 15px;
    right: 15px;
    /*transform*/
    transform: scale(1.4);
    /*transition*/
    transition-property: opacity;
    transition-duration: 500ms;
  }

}

